# notebooks-in-order

./: .pre-commit-hooks.yaml  README.md  check_notebook_in_order.py  setup.cfg
notebooks_in_order/: check_notebooks_in_order.py
