# setup.cfg
[metadata]
name = notebooks-in-order
description = Check Jupyter notebooks were executed in order
version = 0.1.0
author = Tobias Schmidt
author_email = royalts@gmail.com
license = MIT
url = https://github.com/RoyalTS/notebooks-in-order

[options]
packages = find:

[options.entry_points]
console_scripts =
    print-arguments = check_notebooks_in_order.main:main
