[metadata]
name = notebooks-in-order
description = Check Jupyter notebooks were executed in order
version = 0.3.0
author = Tobias Schmidt
author_email = royalts@gmail.com
license = MIT
url = https://github.com/RoyalTS/notebooks-in-order

[options]
packages = find:
install_requires =
    nbformat

[build-system]
requires = ["setuptools"]

[options.entry_points]
console_scripts =
    check_notebooks_in_order = notebooks_in_order.check_notebooks_in_order:main
